--- a/userinput/Jenkinsfile
+++ b/userinput/Jenkinsfile
@@ -2,6 +2,11 @@ pipeline{
     agent{
         label "master"
     }
+    options {
+        timeout(time: 30, unit: 'MINUTES')
+        timestamps()
+        buildDiscarder(logRotator(numToKeepStr: '5'))
+    }
     stages{
         stage("A"){
             steps{
